# uwf-annotate-tool

./: .gitignore  CLAUDE_CODE_ANNOTATION_TOOL.md  CLAUDE_CODE_SKELETON_EXPERIMENT.md  README.md  README_CLINICIAN.md  environment_clinician.yml  pyproject.toml  requirements_clinician.txt
annotation_tool/: README.md  annotate.py  protocol.md  utils.py
annotation_tool/tests/: test_tool.py
condor/: 1_build_reference.job  1_build_reference.sh  phase0_unet.job  phase0_unet.sh  skeleton_recon.job  skeleton_recon.sh
docs/: 00_OVERVIEW.md  01_COORDINATE_SYSTEM.md  02_SEGMENTATION.md  03_SKELETON_AND_SEGMENTS.md  04_DIAMETER_EXTRACTION.md  05_KNUDTSON_AGGREGATION.md  06_LONGITUDINAL.md  ITERATION_LOG.md
examples/: run_single_uwf.py  smoke_test.py
experiments/phase0_unet/: config.yaml  dataset.py  evaluate.py  losses.py  run_all_conditions.py  train_unet.py  unet.py
experiments/skeleton_reconstruction/: README.md  analyze.py  compare_v1_v2.py  data.py  merge_shards.py  metrics.py  reconstruct.py  reconstruct_v2.py  run_batch.py  run_single.py  run_v2.py  steger.py  width_correlation.py
scripts/: fetch_models.py
scripts/clinician/: annotate.bat  annotate.command  setup.bat  setup.command  upload.bat  upload.command
src/uwf_zonal_extraction/: __init__.py  cli.py  config.py  coordinate_system.py  dewarp.py  extractor.py  io.py  knudtson.py  models.py  profile_fitting.py  skeleton.py  utils.py  viz.py
src/uwf_zonal_extraction/longitudinal/: __init__.py  delta.py  matching.py
src/uwf_zonal_extraction/segmentation/: __init__.py  bundle.py  fovea.py  lunet.py  lunet_odc.py  providers.py
tests/: conftest.py  test_coordinate_system.py  test_knudtson.py  test_profile_fitting.py  test_skeleton.py
